<resources>
    <string name="app_name">NewsPaper</string>
    <string name="toast_connection_error">Bağlantı hatası. Lütfen internet bağlantını kontrol edip tekrar dene</string>
    <string name="splash_fragment">Hello Splash</string>
    <string name="login_fragment">Hello Login</string>
    <string name="register_fragment">Hello Register</string>
    <string name="maintenance_fragment">Hello Maintenance</string>
    <string name="home_fragment">Hello Home</string>
    <string name="fav_fragment">Hello Favorite</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="then">Daha sonra</string>
    <string name="update">Güncelle</string>
    <string name="ok">Tamam</string>
    <string name="reset">Sıfırla</string>
    <string name="favorite">Favoriler</string>
    <string name="favorite_news">Favori Haberler</string>
    <string name="home">Ana Sayfa</string>
    <string name="exit">Çıkış</string>
    <string name="news">News</string>
    <string name="paper">Paper</string>
    <string name="top_headlines">En Önemli Başlıklar</string>
    <string name="connection_fail">Bağlantı hatası haberler yüklenemedi.</string>
    <string name="tech_news">Teknoloji Haberleri</string>
    <string name="already_added_fav">Bu haber zaten favorilere eklenmiştir.</string>
    <string name="is_exit_sure">Uygulamadan çıkmak istediğinize emin misiniz?</string>
    <string name="empty_favorites">Favorilerine haber eklediğin ana buralar dolacak!</string>

    <!-- Maintenance -->
    <string name="maintenance_header">Bakımdayız…</string>
    <string name="maintenance_text">NewsPaperı sizlere daha iyi bir hizmet verebilmek için bakıma aldık. Anlayışınız için teşekkürler.</string>

    <!-- Login -->
    <string name="login_header">Haberler için hızlıca giriş yap!</string>
    <string name="login_email">E-posta</string>
    <string name="login_password">Şifre</string>
    <string name="login">Giriş Yap</string>
    <string name="sign_up_no_account">Henüz üye değilsen, hemen yeni hesap oluştur!</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="remember_me">Beni hatırla</string>
    <string name="incorrect_login">Giriş bilgileriniz hatalıdır, lütfen tekrar deneyiniz.</string>
    <string name="email_for_forgot_password">Şifresini sıfırlamak istediğiniz e-posta adresini giriniz</string>
    <string name="please_enter_email">Lütfen e-posta adresini giriniz.</string>
    <string name="please_enter_email_or_password">Lütfen giriş bilgilerinizi eksiksiz giriniz.</string>

    <!-- Register -->
    <string name="register_header">Haberlerden uzak kalma, hemen kayıt ol!</string>
    <string name="register">Kayıt Ol</string>
    <string name="i_have_a_membership">Üyeliğiniz varsa, hemen giriş yap!</string>
    <string name="invalid_email">Geçersiz Eposta!</string>
    <string name="invalid_password">Şifreniz en az 8 karakterden oluşmalıdır!</string>
    <string name="correct_register">Kaydınız başarı ile oluşturuldu giriş yapabilirsiniz.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>