<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.login.LoginFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.newspaper.ui.auth.login.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_16"
        android:paddingTop="@dimen/padding_24">

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/gray_600"
            android:textStyle="bold"
            android:text="@string/login_header" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:hint="@string/login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:typeface="monospace" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:hint="@string/login_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:typeface="monospace" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/margin_24"
            android:backgroundTint="@color/primary"
            android:text="@string/login"/>

        <View style="@style/NPHorizontalDivider"
            android:layout_marginVertical="@dimen/margin_24"/>

        <TextView
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:text="@string/sign_up_no_account"
            />

    </LinearLayout>

</layout>