<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.register.RegisterFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.newspaper.ui.auth.register.RegisterViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_16"
        android:paddingTop="@dimen/padding_24">

        <TextView
            android:id="@+id/tvRegisterHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/gray_600"
            android:textStyle="bold"
            android:text="@string/register_header" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:hint="@string/login_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:typeface="monospace" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:hint="@string/login_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:typeface="monospace" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/margin_24"
            android:backgroundTint="@color/primary"
            android:text="@string/register"/>

        <View style="@style/NPHorizontalDivider"
            android:layout_marginVertical="@dimen/margin_24"/>

        <TextView
            android:id="@+id/tvRegisterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:text="@string/i_have_a_membership"
            android:onClick="@{() -> viewModel.onSignIn()}"/>

    </LinearLayout>

</layout>